# Baba-Is-You-Version-AKA-

./: CMakeLists.txt  README.md  app_main.cpp  partitions.csv  sdkconfig
assets/music/: CRYSTAL.cpp  WF-MAGES.cpp  baba_cave_newer_short.h  baba_samba_la_baba.h
components/: ReadMe.md
components/gamebuino/: CMakeLists.txt
components/gamebuino/gb_lib/: font8x8_basic.cpp  gb_audio_player.cpp  gb_audio_track_pmf.cpp  gb_audio_track_tone.cpp  gb_core.cpp  gb_graphics.cpp
components/gamebuino/gb_lib/pmf_player/: Arduino.h  pmf_player.cpp  pmf_player.h
components/gamebuino/gb_ll/: gb_ll_audio.c  gb_ll_i2c.c  gb_ll_lcd.c
components/gamebuino/include_lib/: font8x8_basic.h  gb_audio_player.h  gb_audio_track_pmf.h
core/: audio.cpp  audio.h  graphics.cpp  graphics.h  grid.cpp  grid.h  input.cpp  input.h  movement.cpp  persist.cpp  sprites.cpp
game/: config.h  game.cpp  game.h  levels.cpp  levels.h  music_map.h  options.cpp
level_editor/: extract_levels.py
level_editor/levels/: level1.txt  level12.txt  level13.txt  level14.txt  level16.txt  level17.txt  level2.txt  level20.txt  level37.txt  level5.txt  level6.txt  level7.txt  level8.txt
lib/: font8x8_basic.cpp  font8x8_basic.h  gb_audio_track_pmf.cpp  gb_audio_track_pmf.h  gb_common.h  gb_core.cpp  gb_graphics.cpp  gb_ll_lcd.c
lib/pmf_player/: pmf_player.cpp  pmf_player.h
main/: CMakeLists.txt  app_main.cpp
main/assets/gfx/: atlas.h
main/assets/music/: MISTHART.cpp  WF-DRAGO.cpp  WF-DRAGO.h  WF-MAGES.h  baba_music_2.h
main/core/: audio.cpp  filesystem.cpp  filesystem.h  graphics.cpp  graphics.h  grid.cpp  grid.h  input.cpp  input.h  movement.cpp  movement.h  rules.cpp  rules.h  sprites.cpp  sprites.h  types.cpp  types.h
main/game/: config.cpp  config.h  game.cpp  game.h  levels.cpp  levels.h  levels_data.cpp  menu.cpp  menu.h  music_map.h  options.cpp
main/level_editor/: baba_level_editor.html
main/level_editor/levels/: level10.txt  level11.txt  level15.txt  level18.txt  level19.txt  level21.txt  level22.txt  level26.txt  level3.txt  level30.txt  level4.txt  level40.txt  level9.txt
main/main/assets/gfx/: atlas.cpp
main/main/assets/music/: CRYSTAL.h  MISTHART.h  baba_cave_newer_short.cpp  baba_music_2.cpp  baba_samba_la_baba.cpp
main/main/core/: input.cpp  persist.h  types.h
main/main/game/: defines.h  game.cpp  levels_data.cpp  options.h
main/main/tasks/: task_audio.h
main/tasks/: task_audio.cpp  task_game.cpp  task_input.cpp  task_input.h
tasks/: task_audio.cpp  task_game.cpp  task_input.cpp  task_input.h
